--- a/rosalie.html
+++ b/rosalie.html
@@ -443,6 +443,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#cure-wounds" role="button"><strong>Cure Wounds</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="cure-wounds">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> Touch</p>
                   <p class="m-0">A creature you touch regains a number of hit points equal to 1d8 + your spellcasting ability modifier. This spell has no effect on undead or constructs.
@@ -454,6 +455,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#command" role="button"><strong>Command</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="command">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 60 feet</p>
                   <p class="m-0"><strong>Duration:</strong>1 round</p>
@@ -471,6 +473,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#dissonant-whispers" role="button"><strong>Dissonant Whispers</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="dissonant-whispers">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 60 feet</p>
                   <p class="m-0">You whisper a discordant melody that only one creature of your choice within range can hear, wracking it with terrible pain. The target must make a Wisdom saving throw. On a failed save, it takes 3d6 psychic damage and must immediately use its reaction, if available, to move as far as its speed allows away from you. The creature doesn’t move into obviously dangerous ground, such as a fire or a pit. On a successful save, the target takes half as much damage and doesn’t have to move away. A deafened creature automatically succeeds on the save.
@@ -482,6 +485,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#silvery-barbs" role="button"><strong>Silvery Barbs</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="silvery-barbs">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 reaction, which you take when a creature you can see within 60 feet of yourself succeeds on an attack roll, an ability check, or a saving throw</p>
                   <p class="m-0"><strong>Range:</strong> 60 feet</p>
                   <p class="m-0"><strong>Duration:</strong>Concentration, up to 1 minute</p>
@@ -494,6 +498,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#tasha-laughter" role="button"><strong>Tasha's Hideous Laughter</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="tasha-laughter">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 30 feet</p>
                   <p class="m-0"><strong>Duration:</strong> Concentration, up to 1 minute</p>
@@ -506,6 +511,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#heat-metal" role="button"><strong>Heat Metal</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="heat-metal">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 2</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 60 feet</p>
                   <p class="m-0"><strong>Duration:</strong> Concentration, up to 1 minute</p>
@@ -519,6 +525,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#hold-person" role="button"><strong>Hold Person</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="hold-person">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 2</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 60 feet</p>
                   <p class="m-0"><strong>Duration:</strong> Concentration, up to 1 minute</p>
