--- a/walid.html
+++ b/walid.html
@@ -456,6 +456,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#fearie-fire" role="button"><strong>Faerie Fire</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="fearie-fire">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 60 feet </p>
                   <p class="m-0"><strong>Duration:</strong>Concentration, up to 1 minute</p>
@@ -469,6 +470,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#sleep" role="button"><strong>Sleep</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="sleep">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 90 feet</p>
                   <p class="m-0"><strong>Duration:</strong>1 minute</p>
@@ -482,6 +484,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#bane" role="button"><strong>Bane</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="bane">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 30 feet</p>
                   <p class="m-0"><strong>Duration:</strong> Concentration, up to 1 minute</p>
@@ -494,6 +497,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#cure-wounds" role="button"><strong>Cure Wounds</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="cure-wounds">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> Touch</p>
                   <p class="m-0">A creature you touch regains a number of hit points equal to 1d8 + your spellcasting ability modifier. This spell has no effect on undead or constructs.
@@ -505,6 +509,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#guiding-bolt" role="button"><strong>Guiding Bolt</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="guiding-bolt">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 60 feet</p>
                   <p class="m-0"><strong>Duration:</strong>1 round</p>
@@ -517,6 +522,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#moonbeam" role="button"><strong>Moonbeam</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="moonbeam">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 120 feet</p>
                   <p class="m-0"><strong>Duration:</strong>Concentration, up to 1 minute</p>
@@ -532,6 +538,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#see-invisibility" role="button"><strong>See Invisibility</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="see-invisibility">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 1</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> Self</p>
                   <p class="m-0"><strong>Duration:</strong>1 hour</p>
@@ -543,6 +550,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#spiritual-weapon" role="button"><strong>Spiritual Weapon</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="spiritual-weapon">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 2</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 bonus action</p>
                   <p class="m-0"><strong>Range:</strong> 60 feet</p>
                   <p class="m-0"><strong>Duration:</strong>1 minute</p>
@@ -558,6 +566,7 @@
               <p class=" btn p-0 m-0" data-bs-toggle="collapse" data-bs-target="#aid" role="button"><strong>Aid</strong></p>
               <ul class="navbar-nav collapse justify-content-center" id="aid">
                 <li class="nav-item d-flex flex-column flex-wrap gap-lg-1 gap-md-1">
+                  <p class="m-0"><strong>Level:</strong> 2</p>
                   <p class="m-0"><strong>Casting Time:</strong> 1 action</p>
                   <p class="m-0"><strong>Range:</strong> 30 feet</p>
                   <p class="m-0"><strong>Duration:</strong>8 hours</p>
